--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "dependencies": {
     "@emotion/core": "^10.0.22",
     "@emotion/styled": "^10.0.23",
+    "aws-amplify": "^2.2.4",
+    "aws-amplify-react": "^3.1.5",
     "gatsby": "^2.18.4",
     "gatsby-image": "^2.2.34",
     "gatsby-plugin-emotion": "^4.1.16",
@@ -17,6 +19,7 @@
     "gatsby-plugin-react-helmet": "^3.1.16",
     "gatsby-plugin-sharp": "^2.3.4",
     "gatsby-source-filesystem": "^2.1.39",
+    "gatsby-source-graphql": "^2.1.33",
     "gatsby-transformer-sharp": "^2.3.6",
     "gsap": "^3.0.2",
     "prop-types": "^15.7.2",
