--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby-plugin-sharp": "^2.3.4",
     "gatsby-source-filesystem": "^2.1.39",
     "gatsby-source-graphql": "^2.1.33",
+    "gatsby-transformer-csv": "^2.1.26",
     "gatsby-transformer-sharp": "^2.3.6",
     "gsap": "^3.0.2",
     "prop-types": "^15.7.2",
