--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "@emotion/styled": "^10.0.23",
     "aws-amplify": "^2.2.4",
     "aws-amplify-react": "^3.1.5",
-    "gatsby": "^2.18.4",
+    "core-js": "^2.5.7",
+    "gatsby": "^2.19.18",
     "gatsby-image": "^2.2.34",
     "gatsby-plugin-emotion": "^4.1.16",
     "gatsby-plugin-layout": "^1.1.16",
@@ -21,13 +22,16 @@
     "gatsby-source-filesystem": "^2.1.39",
     "gatsby-source-graphql": "^2.1.33",
     "gatsby-transformer-csv": "^2.1.26",
+    "gatsby-transformer-json": "^2.2.26",
     "gatsby-transformer-sharp": "^2.3.6",
     "gsap": "^3.0.2",
+    "neat-csv": "^5.2.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "recharts": "^1.8.5"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
